# majas-darbs-1-db

./: main.py  pyproject.toml
data/: admin.json  bojajumi.json  bojajumi_.json  bojajumi_vecais.json  datoruDB.json  datoruDB_.json  kabinets.json  klase.json  klase_old.json  room.json  status.json  unity_type.json  visas_tehnikas_db.json
static/: datorudb.json  room.json  visas_tehnikas_db.json
